changement de style

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,11 @@
-<div>
-    <h1>Bienvenue au Camion de Pizza</h1>
-    <p>Découvrez nos délicieuses pizzas et plats préparés avec amour.</p>
-      <h2>Nos horaires d'ouverture :</h2>
-      <ul>
-        <li>Lundi : 11h - 22h à Paris</li>
-        <li>Mardi : 11h - 22h à Lyon</li>
-        <li>Mercredi : 11h - 22h à Marseille</li>
-        <li>Jeudi : 11h - 22h à Lille</li>
-        <li>Vendredi : 11h - 23h à Bordeaux</li>
-      </ul>
+<div class="container my-5">
+  <h1 class="text-center" style="color: #e74c3c;">Bienvenue au Camion de Pizza</h1>
+  <div class="text-center" style="font-size: 1.2rem; color: #333;">Découvrez nos délicieuses pizzas et plats préparés avec amour !
+    <h2>Nos horaires d'ouverture :</h2>
+      <p>Lundi : 11h - 22h à Paris</p>
+      <p>Mardi : 11h - 22h à Lyon</p>
+      <p>Mercredi : 11h - 22h à Marseille</p>
+      <p>Jeudi : 11h - 22h à Lille</p>
+      <p>Vendredi : 11h - 23h à Bordeaux</p>
+  </div>
 </div>
