--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,41 +1,39 @@
-<section>
-    <h1>Notre carte</h1>
-    <table>
+<div class="container my-5">
+  <h2 class="text-center" style="color: #e74c3c;">Notre Menu</h2>
+  <table class="table table-striped">
+    <thead>
       <tr>
         <th>Produit</th>
-        <th>Composition</th>
+        <th>Description</th>
         <th>Prix</th>
       </tr>
+    </thead>
+    <tbody>
       <tr>
-        <td>Pizza Margherita</td>
-        <td>Base tomate, Mozzarella, Basilic</td>
-        <td>8€</td>
+        <td>Margherita</td>
+        <td>Pizza classique avec sauce tomate, mozzarella et basilic</td>
+        <td>12.00 €</td>
       </tr>
       <tr>
-        <td>Pizza Reine</td>
-        <td>Base tomate, Mozzarella, Jambon, Champignons</td>
-        <td>10€</td>
+        <td>Pepperoni</td>
+        <td>Pizza avec sauce tomate, mozzarella et pepperoni</td>
+        <td>14.00 €</td>
       </tr>
       <tr>
-        <td>Pizza 4 Fromages</td>
-        <td>Base tomate, Mozzarella, Emmental, Bleu, Chèvre</td>
-        <td>12€</td>
+        <td>Quattro Formaggi</td>
+        <td>Pizza avec un mélange de quatre fromages</td>
+        <td>15.00 €</td>
       </tr>
       <tr>
-        <td>Vin rouge</td>
-        <td>Bouteille 75cl</td>
-        <td>15€</td>
+        <td>Vin Rouge</td>
+        <td>Vin rouge italien</td>
+        <td>8.00 €</td>
       </tr>
       <tr>
         <td>Soda</td>
-        <td>Canette 33cl</td>
-        <td>2€</td>
+        <td>Boisson gazeuse</td>
+        <td>2.50 €</td>
       </tr>
-      <tr>
-        <td>Eau</td>
-        <td>Bouteille 50cl</td>
-        <td>1.5€</td>
-      </tr>
-    </table>
-  </section>
-  
+    </tbody>
+  </table>
+</div>
