--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,5 +1,5 @@
-<section>
-    <h1>Erreur 404, page non trouvée</h1>
-    <button routerLink="/">Retour à l'accueil</button>
-  </section>
-  
+<div class="container text-center my-5">
+  <h1 class="display-4" style="color: #e74c3c;">Erreur 404</h1>
+  <p class="lead">Page non trouvée</p>
+  <a class="btn btn-danger" [routerLink]="['/']">Retour à l'accueil</a>
+</div>
