--- a/src/app/structure/footer/footer.component.html
+++ b/src/app/structure/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
-    <p>&copy;  Mon Camion de Pizza</p>
-    <a routerLink="/legal-notices">Mentions légales</a>
-  </footer>
+<footer class="bg-light text-center text-dark py-3" style="background-color: #8e735b;">
+  <p class="mb-0">&copy; 2024 Pizzeria. Tous droits réservés.</p>
+  <a href="/legal-notices" class="text-light">Mentions légales</a>
+</footer>
