--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-header />
-<router-outlet></router-outlet>
-<app-footer />
+<app-header></app-header>
+<div class="d-flex flex-column min-vh-100">
+    <router-outlet></router-outlet> 
+    <app-footer></app-footer>
+</div>
+  
