--- a/src/app/structure/header/header.component.html
+++ b/src/app/structure/header/header.component.html
@@ -1,7 +1,19 @@
-<header>
-    <nav>
-      <a routerLink="/">Accueil</a>
-      <a routerLink="/menu">Carte</a>
-      <a routerLink="/contact">Contact</a>
-    </nav>
-  </header>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e74c3c;">
+  <a class="navbar-brand text-white" href="#">Pizzeria</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link text-white" [routerLink]="['/']">Accueil</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" [routerLink]="['/menu']">Carte</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-white" [routerLink]="['/contact']">Contact</a>
+      </li>
+    </ul>
+  </div>
+</nav>
