--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #c8e6c9 !important; /* Vert pâle */
-  color: #333; /* Couleur du texte */
+  background-color: #c8e6c9 !important;
+  color: #333; 
 }
 
 .navbar, .footer {
@@ -21,12 +21,11 @@ body {
   border-color: #c0392b;
 }
 
-/* CSS personnalisé pour les liens téléphoniques */
 a[href^="tel:"] {
-  color: #e74c3c; /* Couleur du numéro de téléphone */
-  text-decoration: none; /* Enlever le soulignement par défaut */
+  color: #e74c3c; 
+  text-decoration: none; 
 }
 
 a[href^="tel:"]:hover {
-  text-decoration: underline; /* Souligner le lien au survol */
+  text-decoration: underline; 
 }
